--- a/1.html
+++ b/1.html
@@ -1,38 +1,40 @@
 <!doctype html>
 <html>
 <head>
-<title>Welcome to My page - HTML</title>
+<title>Welcome to My page - Hello world</title>
 </head>
 
 <body>
-<h1> <a href="index.html">web</a></h1>
+<h1><a href="1.html">web</a></h1>
 <ul>
-    <li><a href="1.html">1. HTML</a> </li>
-    <li><a href="2.html"> 2. CSS</a> </li>
-    <li><a href="3.html">3. JavaScript</a></li>
+    <li><a href="2.html">1. HTML</a> </li>
+    <li><a href="3.html">2. CSS</a> </li>
+    <li><a href="index.html">3. JavaScript</a></li>
 </ul>
+<p>
+<h3>Introduce Web</h3>   
 <ol>
-<li>밤에 일찍 자기</li>
-<li>일어나기</li>
-<li>씻기</li>
-<li>밥 먹기</li>
+    <li>The first web name is 'The World Wide Web'</li>
+    <li>WWW or W3 refers to all the public websites or pages</li>
+    <li>First website URL was <a href="http://info.cern.ch" target="_blank">http://info.cern.ch</a></li>
+    <li>The web is made by Tim Berners-Lee</li>
 </ol>
-<h2>HTML</h2>
-Hello world.
-오랜만에 다시 <strong>공부시작</strong>
-<u>나만의 진로를 찾겠어요</u> <strong><u>진로</u></strong>
-<h6>HTML</h6>
-<a href="https://european-union.europa.eu/select-language?destination=/node/1"target="_blank"title="EU">
-The European Union</a> is a group of 27 European countries.
-<br>After World War II, six countries decided to team up to jointly control their industrial production.
-<br><br>This meant that none of them would be able to make weapons on its own and start a new war.
-They increased their cooperation in 1957 by creating the ‘European Economic Community’ (EEC), which was the forerunner of today’s European Union (EU).
-<br><br>When travelling between most EU countries, you no longer have to show your passport.
-20 EU countries use the same currency: the euro.The EU has three common symbols:
-a flag (12 golden stars on a blue background)
-a hymn (Beethoven's 'Ode to Joy')
-<img src="coding.jpg" width="400">
-<p>a motto ('United in diversity')
-Are you ready to discover what is special about each EU country?</p>
+</p>
+<br>
+<br>
+<p>
+<img src="Tim Berners Lee.jpg" width="450">
+<br>
+<h4>History of the World Wide Web</h4>
+<u>British physicist <strong>Tim Berners-Lee</strong> invented the World Wide Web.</u>
+Along with colleagues at Geneva-based CERN -- the European Organization for Nuclear Research -- Berners-Lee had been working on the concept since 1989.
+Their goal was to combine available technologies and data networks to create a user-friendly system for global communication and information sharing. At the time, they began work on the first WWW server, which they called httpd.
+They also dubbed the first client WWW.
+</p>
+<p>
+<h4>How does the World Wide Web work?</h4>
+These pages are the primary component or building blocks of the WWW and are linked through hyperlinks, which provide access from one specific spot in a hypertext or hypermedia document to another spot within that document or a different one.
+Hyperlinks are another defining concept of the WWW and provide its identity as a collection of interconnected documents.
+</p>
 </body>
 </html>
