--- a/2.html
+++ b/2.html
@@ -1,38 +1,48 @@
 <!doctype html>
 <html>
 <head>
-<title>Welcome to My page - CSS</title>
+<title>Welcome to My page - Hello world</title>
 </head>
 
 <body>
-<h1> <a href="index.html">web</a></h1>
+<h1><a href="1.html">web</a></h1>
 <ul>
-    <li><a href="1.html">1. HTML</a> </li>
-    <li><a href="2.html"> 2. CSS</a> </li>
-    <li><a href="3.html">3. JavaScript</a></li>
+    <li><a href="2.html">1. HTML</a> </li>
+    <li><a href="3.html">2. CSS</a> </li>
+    <li><a href="index.html">3. JavaScript</a></li>
 </ul>
+<p>
+<h3>Introduce HTML</h3>
 <ol>
-<li>밤에 일찍 자기</li>
-<li>일어나기</li>
-<li>씻기</li>
-<li>밥 먹기</li>
+    <li>Full name of HTML is 'Hypertext Markup Language'</li>
+    <li>HTML is the language for describing the structure of Web pages</li>
+    <li>head tag is used the most </li>
+    <li>HTML study is basic and very important</li>
 </ol>
-<h2>CSS</h2>
-Hello world.
-2.html 페이지입니다.<strong>공부시작</strong>
-<u>나만의 진로를 찾겠어요</u> <strong><u>진로</u></strong>
-<h6>HTML</h6>
-<a href="https://european-union.europa.eu/select-language?destination=/node/1"target="_blank"title="EU">
-The European Union</a> is a group of 27 European countries.
-<br>After World War II, six countries decided to team up to jointly control their industrial production.
-<br><br>This meant that none of them would be able to make weapons on its own and start a new war.
-They increased their cooperation in 1957 by creating the ‘European Economic Community’ (EEC), which was the forerunner of today’s European Union (EU).
-<br><br>When travelling between most EU countries, you no longer have to show your passport.
-20 EU countries use the same currency: the euro.The EU has three common symbols:
-a flag (12 golden stars on a blue background)
-a hymn (Beethoven's 'Ode to Joy')
-<img src="coding.jpg" width="400">
-<p>a motto ('United in diversity')
-Are you ready to discover what is special about each EU country?</p>
+</p>
+<p>
+<h4>How do I write HTML code?</h4>
+Step 1: Open Notepad (PC) Windows 8 or later: ...
+<br>
+Step 2: Open TextEdit (Mac) Open Finder > Applications > TextEdit. ...
+<br>
+Step 3: Write Some HTML. Write or copy the following HTML code into Notepad: ...
+<br>
+Step 4: Save the HTML Page. Save the file on your computer. ...
+<br>
+Step 5: View the HTML Page in Your Browser.
+</p>
+<br>
+<br>
+<p>
+<h4>Let's study HTML!(If you click <a href="https://www.uen.org/k12educator/htmltags.shtml" target="_blank" title="uen.org">here</a>, you can learn many tags)</h4>
+<img src="study.jpg" width="500">
+<br>
+<br>
+- <i>Italicize</i> Text i tags
+<br>
+We use <i>italics</i> to distinguish certain words from others within the text.
+<br> We use <strong><</strong><strong>i></strong>italics<strong><</strong><strong>/</strong><strong>i></strong> to distinguish certain words from others within the text.
+</p>
 </body>
 </html>
