순서 변경, index.html, 1.html 완성

--- a/2.html
+++ b/2.html
@@ -5,44 +5,31 @@
 </head>
 
 <body>
-<h1><a href="1.html">web</a></h1>
+<h1><a href="index.html">web</a></h1>
 <ul>
-    <li><a href="2.html">1. HTML</a> </li>
-    <li><a href="3.html">2. CSS</a> </li>
-    <li><a href="index.html">3. JavaScript</a></li>
+    <li><a href="1.html">1. HTML</a> </li>
+    <li><a href="2.html">2. CSS</a> </li>
+    <li><a href="3.html">3. JavaScript</a></li>
 </ul>
 <p>
-<h3>Introduce HTML</h3>
+<h3>Introduce CSS</h3>
 <ol>
-    <li>Full name of HTML is 'Hypertext Markup Language'</li>
-    <li>HTML is the language for describing the structure of Web pages</li>
-    <li>head tag is used the most </li>
-    <li>HTML study is basic and very important</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
 </ol>
 </p>
 <p>
-<h4>How do I write HTML code?</h4>
-Step 1: Open Notepad (PC) Windows 8 or later: ...
-<br>
-Step 2: Open TextEdit (Mac) Open Finder > Applications > TextEdit. ...
-<br>
-Step 3: Write Some HTML. Write or copy the following HTML code into Notepad: ...
-<br>
-Step 4: Save the HTML Page. Save the file on your computer. ...
-<br>
-Step 5: View the HTML Page in Your Browser.
+<h4>제목</h4>
+내용
 </p>
 <br>
 <br>
 <p>
-<h4>Let's study HTML!(If you click <a href="https://www.uen.org/k12educator/htmltags.shtml" target="_blank" title="uen.org">here</a>, you can learn many tags)</h4>
-<img src="study.jpg" width="500">
-<br>
-<br>
-- <i>Italicize</i> Text i tags
-<br>
-We use <i>italics</i> to distinguish certain words from others within the text.
-<br> We use <strong><</strong><strong>i></strong>italics<strong><</strong><strong>/</strong><strong>i></strong> to distinguish certain words from others within the text.
+<h4>제목</h4>
+사진
+<br>내용
 </p>
 </body>
 </html>
