--- a/1.html
+++ b/1.html
@@ -5,36 +5,44 @@
 </head>
 
 <body>
-<h1><a href="1.html">web</a></h1>
+<h1><a href="index.html">web</a></h1>
 <ul>
-    <li><a href="2.html">1. HTML</a> </li>
-    <li><a href="3.html">2. CSS</a> </li>
-    <li><a href="index.html">3. JavaScript</a></li>
+    <li><a href="1.html">1. HTML</a> </li>
+    <li><a href="2.html">2. CSS</a> </li>
+    <li><a href="3.html">3. JavaScript</a></li>
 </ul>
 <p>
-<h3>Introduce Web</h3>   
+<h3>Introduce HTML</h3>
 <ol>
-    <li>The first web name is 'The World Wide Web'</li>
-    <li>WWW or W3 refers to all the public websites or pages</li>
-    <li>First website URL was <a href="http://info.cern.ch" target="_blank">http://info.cern.ch</a></li>
-    <li>The web is made by Tim Berners-Lee</li>
+    <li>Full name of HTML is 'Hypertext Markup Language'</li>
+    <li>HTML is the language for describing the structure of Web pages</li>
+    <li>head tag is used the most </li>
+    <li>HTML study is basic and very important</li>
 </ol>
 </p>
-<br>
-<br>
 <p>
-<img src="Tim Berners Lee.jpg" width="450">
+<h4>How do I write HTML code?</h4>
+Step 1: Open Notepad (PC) Windows 8 or later: ...
 <br>
-<h4>History of the World Wide Web</h4>
-<u>British physicist <strong>Tim Berners-Lee</strong> invented the World Wide Web.</u>
-Along with colleagues at Geneva-based CERN -- the European Organization for Nuclear Research -- Berners-Lee had been working on the concept since 1989.
-Their goal was to combine available technologies and data networks to create a user-friendly system for global communication and information sharing. At the time, they began work on the first WWW server, which they called httpd.
-They also dubbed the first client WWW.
+Step 2: Open TextEdit (Mac) Open Finder > Applications > TextEdit. ...
+<br>
+Step 3: Write Some HTML. Write or copy the following HTML code into Notepad: ...
+<br>
+Step 4: Save the HTML Page. Save the file on your computer. ...
+<br>
+Step 5: View the HTML Page in Your Browser.
 </p>
+<br>
+<br>
 <p>
-<h4>How does the World Wide Web work?</h4>
-These pages are the primary component or building blocks of the WWW and are linked through hyperlinks, which provide access from one specific spot in a hypertext or hypermedia document to another spot within that document or a different one.
-Hyperlinks are another defining concept of the WWW and provide its identity as a collection of interconnected documents.
+<h4>Let's study HTML!(If you click <a href="https://www.uen.org/k12educator/htmltags.shtml" target="_blank" title="uen.org">here</a>, you can learn many tags)</h4>
+<img src="study.jpg" width="500">
+<br>
+<br>
+- <i>Italicize</i> Text i tags
+<br>
+We use <i>italics</i> to distinguish certain words from others within the text.
+<br> We use <strong><</strong><strong>i></strong>italics<strong><</strong><strong>/</strong><strong>i></strong> to distinguish certain words from others within the text.
 </p>
 </body>
 </html>
