--- a/3.html
+++ b/3.html
@@ -5,14 +5,14 @@
 </head>
 
 <body>
-<h1><a href="1.html">web</a></h1>
+<h1><a href="index.html">web</a></h1>
 <ul>
-    <li><a href="2.html">1. HTML</a> </li>
-    <li><a href="3.html">2. CSS</a> </li>
-    <li><a href="index.html">3. JavaScript</a></li>
+    <li><a href="1.html">1. HTML</a> </li>
+    <li><a href="2.html">2. CSS</a> </li>
+    <li><a href="3.html">3. JavaScript</a></li>
 </ul>
 <p>
-<h3>Introduce CSS</h3>
+<h3>Introduce JavaScript</h3>
 <ol>
     <li></li>
     <li></li>
