--- a/index.html
+++ b/index.html
@@ -5,31 +5,36 @@
 </head>
 
 <body>
-<h1><a href="1.html">web</a></h1>
+<h1><a href="index.html">web</a></h1>
 <ul>
-    <li><a href="2.html">1. HTML</a> </li>
-    <li><a href="3.html">2. CSS</a> </li>
-    <li><a href="index.html">3. JavaScript</a></li>
+    <li><a href="1.html">1. HTML</a> </li>
+    <li><a href="2.html">2. CSS</a> </li>
+    <li><a href="3.html">3. JavaScript</a></li>
 </ul>
 <p>
-<h3>Introduce JavaScript</h3>
+<h3>Introduce Web</h3>   
 <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>The first web name is 'The World Wide Web'</li>
+    <li>WWW or W3 refers to all the public websites or pages</li>
+    <li>First website URL was <a href="http://info.cern.ch" target="_blank">http://info.cern.ch</a></li>
+    <li>The web is made by Tim Berners-Lee</li>
 </ol>
 </p>
+<br>
+<br>
 <p>
-<h4>제목</h4>
-내용
+<img src="Tim Berners Lee.jpg" width="450">
+<br>
+<h4>History of the World Wide Web</h4>
+<u>British physicist <strong>Tim Berners-Lee</strong> invented the World Wide Web.</u>
+Along with colleagues at Geneva-based CERN -- the European Organization for Nuclear Research -- Berners-Lee had been working on the concept since 1989.
+Their goal was to combine available technologies and data networks to create a user-friendly system for global communication and information sharing. At the time, they began work on the first WWW server, which they called httpd.
+They also dubbed the first client WWW.
 </p>
-<br>
-<br>
 <p>
-<h4>제목</h4>
-사진
-<br>내용
+<h4>How does the World Wide Web work?</h4>
+These pages are the primary component or building blocks of the WWW and are linked through hyperlinks, which provide access from one specific spot in a hypertext or hypermedia document to another spot within that document or a different one.
+Hyperlinks are another defining concept of the WWW and provide its identity as a collection of interconnected documents.
 </p>
 </body>
 </html>
